@@ -13,7 +13,7 @@
    (export '(out-to-string dbg-out dbg-out-indent
 	     err-out cons-if-new plev plen
 	     classify shorter list-splice is-list-of boole-eq eqn
-	     val-or-initialize memoize-val datafun-match)))
+	     val-or-initialize memoize-val)))
 
 (defmacro out-to-string (&rest outargs)
    `(with-output-to-string (string-stream) (out (:to string-stream) ,@outargs)))
@@ -138,30 +138,3 @@
 				         " :store-as argument")))
    `(val-or-initialize ,store-place^ :init ,exp^ :missing-if ,uncached-val^))
 
-;;; Convenience; not worth documenting, perhaps.
-(defmacro datafun-match (&whole lossage
-                         exp^ pattern^ &rest body^ 
-                         &environment env)
-   (let ((key-sym (macroexpand-1 'datafun-key-sym env))
-         (task-id (macroexpand-1 'datafun-task-id env))
-         (sym (and (is-Pair pattern^) (car pattern^))))
-      (cond ((or (eq key-sym 'datafun-key-sym)
-                 (eq task-id 'datafun-task-id))
-             (signal-problem datafun-match
-                "datafun-match used outside datafun body:"
-                :% lossage))
-            ((eq sym key-sym)
-             (let ((fun-name (build-symbol (< key-sym) - (< task-id))))
-                (with-gen-vars (exp)
-                   `(let ((,exp$ ,exp^))
-                       (match-cond (cdr ,exp$)
-                           (:? ,(cdr pattern^)
-                              ,@body^)
-                           (t (signal-problem ,fun-name
-                                 "Ill-formed: " ,exp$)))))))
-            (t
-             (signal-problem datafun-match
-                "Pattern arg to datafun-match for task " task-id
-                :% " must be S-expression beginning"
-                " with symbol: " key-sym ":"
-                :% 2 lossage)))))
