@@ -1,5 +1,8 @@
 $Id$
             
+2007-06-19: misc.lisp, multilet.lisp: Moved 'datafun-match' from
+            misc.lisp to multilet.lisp 
+
 2007-06-16: datafun.lisp, misc.lisp: Added (datafun-match exp
             pattern -body-), which (a), at macro expansion time, makes
             sure, if the pattern begins with a symbol, that it begins
